# mkdocs-macros-plugin

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  README.md  _setup.py  build.ps1  pyproject.toml  setup.py  test_fixture.sh  update_pypi.sh  util.py
.github/workflows/: greetings.yml  test_push.yaml  testing.yml
docs/: mkdocs.yml
docs/docs/: advanced.md  pages.md  tips.md  why.md
macros/: context.py  macros_info.md  main_sample.py  module_reader.py  plugin.py  test.py  util.py
mkdocs_macros/: __init__.py  context.py  errors.py  macros_info.md  plugin.py  util.py
test/: docproject.py  fixture.py  fixture_util.py  main_sample.py  test_fixture.py  test_modules.py  test_various.py
test/built-in-macros/: main.py
test/built-in-macros/docs/: index.md
test/debug/: mkdocs.yml
test/debug/docs/: index.md
test/missing_macros/: mkdocs.yml  test_site.py
test/missing_macros/docs/: index.md
test/module/: main.py  mkdocs.yml  test_site.py
test/module/docs/: environment.md  index.md  literal.md  nav.md  other.md
test/module/include/: foo.md
test/module_dir/: mkdocs.yml
test/module_dir/docs/: environment.md  index.md
test/module_dir/include/: foo.md
test/module_dir/mymodule/: __init__.py
test/new_syntax/: main.py  mkdocs.yml  test_site.py
test/new_syntax/docs/: index.md
test/no_module/: main.py  mkdocs.yml
test/no_module/docs/: index.md
test/null/: mkdocs.yml  test_site.py
test/null/docs/: index.md  second.md
test/opt-in/: mkdocs.yml
test/opt-in/docs/: index.md  literal.md  noname.md  render_this_one.md
test/opt-in/docs/rendered/: exception.md  noname.md
test/opt-out/: mkdocs.yml
test/opt-out/docs/: index.md  page_with_macros.md
test/opt_in/: mkdocs.yml  test_site.py
test/opt_in/docs/: render_this_one.md
test/opt_in/docs/not_rendered/: noname.md
test/opt_in/docs/rendered/: exception.md
test/opt_out/: mkdocs.yml  test_site.py
test/opt_out/docs/: rendered.md
test/plugin_d2/: __init__.py  mkdocs.yaml  test_t2.py
test/plugin_d2/.cache/plugin/d2/: db.db
test/plugin_d2/docs/: index.md
test/register_macros/: hooks.py  mkdocs.yml  test_doc.py
test/register_macros/docs/: index.md  second.md
test/simple/: mkdocs.yml  test_site.py
test/simple/docs/: index.md  second.md  test.md
tests/: test_builds.py
webdoc/: extra_requirements.txt  mkdocs.yml
webdoc/docs/: advanced.md  changelog.md  contribute.md  git_info.md  help.md  index.md  license.md  macros.md  pages.md  pluglets.md  post_production.md  python.md  registration.md  rendering.md  snippet.md  tips.md  troubleshooting.md  why.md
