[project]
name = "mkdocs-macros-plugin"

# This version number is the REFERENCE for the rest of the project,
# particularly for update_pypi.sh
version = "1.4.0"

description = "Unleash the power of MkDocs with macros and variables"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "Laurent Franceschetti" }]
keywords = ["macros", "markdown", "mkdocs", "python"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.5",
]
dependencies = [
    "hjson",
    "jinja2",
    "mkdocs>=0.17",
    "packaging",
    "pathspec",
    "python-dateutil",
    "pyyaml",
    "super-collections >= 0.5.7",
    "termcolor",
]

[tool.setuptools]
packages = { find = { exclude = ["*.tests"] } }

[project.optional-dependencies]
test = [
    "mkdocs-include-markdown-plugin",
    "mkdocs-macros-test",
    "mkdocs-material>=6.2",
    "mkdocs-test",
    "mkdocs-d2-plugin",
]

# for the MkDocs documentation (webdoc/)
doc = ["mkdocs-mermaid2-plugin"]

[project.entry-points."mkdocs.plugins"]
macros = "mkdocs_macros.plugin:MacrosPlugin"

[project.urls]
Homepage = "https://github.com/fralau/mkdocs_macros_plugin"
